# PNTrianglesQuads

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  PNTrianglesQuads.cpp  PNTrianglesQuads.h  PNTrianglesQuads.sln  PNTrianglesQuads.vcxproj  PNTrianglesQuads.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
shaders/: P3_StandardShading.fragmentshader  P3_StandardShading.vertexshader  P3_StandardShadingHead.fragmentshader  tess.tc.glsl  tess.te.glsl  tess.vs.glsl  tessquad.fs.glsl  tessquad.tc.glsl  tessquad.te.glsl
